...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.RoutesActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAppTheme"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

...
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/fromText"
                app:layout_constraintTop_toTopOf="@+id/fromText"
                app:srcCompat="@drawable/ic_my_location_24dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/toText"
                app:layout_constraintTop_toTopOf="@+id/toText"
                app:srcCompat="@drawable/ic_place_white" />

            <ImageButton
                android:id="@+id/routesPageBackButton"
                android:layout_width="30dp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.771"
                app:layout_constraintStart_toEndOf="@+id/routesPageBackButton"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="409dp"
                android:layout_height="40dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="10dp"
...
                    android:gravity="center_vertical|center_horizontal"
                    android:onClick="onClickShuttle"
                    android:padding="10dp"
                    app:srcCompat="@drawable/shuttle_selection" />

                <ImageButton
                    android:id="@+id/filterButtonWalk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/round_button"
                    android:gravity="center_vertical|center_horizontal"
...

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ListView
        android:id="@+id/allRoutes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:addStatesFromChildren="false"
        android:duplicateParentState="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activities.RoutesActivity"
...
