...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGrey"
    tools:context=".activities.SearchActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="3dp"
        android:background="@drawable/rounded_corners_with_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/searchText"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/search_here"
            android:inputType="textPersonName"
...
            tools:layout_editor_absoluteY="3dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/searchResults"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:background="@color/whiteBackgroundColor"
        android:dividerHeight="1dp"
...
